dark mode link fix

--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ footer a {
         color: #333;
         border-bottom-color: #f3f2ee;
     }
+    body a {
+        color: lightseagreen;
+    }
 }
 @media screen and (min-width:0px) and (max-width: 600px) {
     body {
